--- a/native-http/edit-dogs/public/form.html
+++ b/native-http/edit-dogs/public/form.html
@@ -1,13 +1,13 @@
 <form hx-disabled-elt="#submit-btn" {{ range $key, $value := .Attrs}} {{$key}}="{{$value}}" {{end}}>
 	<div>
 		<label for="name">Name</label>
-		<input id="name" type="text" name="name" value="" size="30" required
+		<input id="name" type="text" name="name"  size="30" required
 			value="{{with .SelectedDog}}{{.Name}}{{end}}" />
 	</div>
 	<div>
 		<label for="breed">Breed</label>
-		<input id="breed" type="text" name="breed" value="" size="30" required
-			vlaue="{{with .SelectedDog}}{{.Breed}}{{end}}" />
+		<input id="breed" type="text" name="breed" size="30" required
+			value="{{with .SelectedDog}}{{.Breed}}{{end}}" />
 	</div>
 	<div class="buttons">
 		<button type="submit" id="submit-btn">
